--- a/Webblocks/Opdracht 3/index.html
+++ b/Webblocks/Opdracht 3/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title>Webblocks - opdracht 3</title>
-        <link>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="containers row-1">
-            <div class="container-1"></div>
-            <div class="container-2"></div>
-            <div class="container-3"></div>
+        <div class="container">
+            <div class="rood"></div>
+            <div class="groen"></div>
+            <div class="blauw"></div>
         </div>
-        <div class="containers row-1">
-            <div class="container-4"></div>
-            <div class="container-5"></div>
+        <div class="flex-row">
+            <div class="lichtblauw"></div>
+            <div class="geel"></div>
         </div>
     </body>
 </html>
