commit webblocks 4 en 5
Nog bezig met het mobile design van opdracht 5

--- a/Webblocks/Opdracht 4/index.html
+++ b/Webblocks/Opdracht 4/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html></html>
+
 <head>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 </head>
+
 <body>
-    <div class="flex-row">
-        <div class="flex-col">
-            <div class="block rood"></div>
-            <div class="block blauw"></div>
+    <div class="container-row">
+        <div class="container-column">
+            <div class="container rood"></div>
+            <div class="container blauw"></div>
         </div>
-        <div class="block groen"></div>
+        <div class="container groen"></div>
     </div>
-    <div class="flex-row">
+    <div class="container-row">
         <div class="block lichtblauw"></div>
-        <div class="flex-col">
-            <div class="block geel"></div>
-            <div class="block roze"></div>
+        <div class="container-column">
+            <div class="container geel"></div>
+            <div class="container roze"></div>
         </div>
     </div>
-    <div class="block donker-rood"></div>
-  </body>
+    <div class="container donkerrood"></div>
+</body>
+
 </html>
