--- a/Webblocks/Opdracht 5/index.html
+++ b/Webblocks/Opdracht 5/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Webblocks - Opdracht 5</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width">
-    <meta charset="UTF-8">
-</head>
+    <head>
+        <title>Webblocks - Opdracht 5</title>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width">
+        <meta charset="UTF-8">
+    </head>
 
-<body>
-    <div class="flex-con licht-rood">
-        <div class="rood"></div>
-    </div>
-    <div class="flex-con-1 licht-paars">
-        <div class="flex-column">    
-            <div class="paars"></div>
-            <div class="geel"></div>
-            <div class="roze"></div>
+    <body>
+        <div class="flex-con licht-rood">
+            <div class="rood"></div>
         </div>
-    </div>
-    <div class="flex-con-2 licht-groen">
-        <div class="groen"></div>
-    </div>
-</body>
+        <div class="flex-con-1 licht-paars">
+            <div class="flex-column">
+                <div class="paars"></div>
+                <div class="geel"></div>
+            </div>
+            <div class="flex-con-2">
+                <div class="roze"></div>
+            </div>
+        </div>
+        <div class="flex-con-3 licht-groen">
+            <div class="groen"></div>
+        </div>
+    </body>
 
 </html>
