--- a/over-ons.html
+++ b/over-ons.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
+    </style>
 </head>
 <body>
+    <header>
+        <div class="header-width">
+            <div class="logo">
+                <a href="index.html"><img src="/Logo/logo_large.png" alt="home-logo" class="logo"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="over-ons.html">Over ons</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="hero-container over-ons-image">
+            <h1 aria-hidden="true">Over ons</h1>
+        </div>
+    </main>
     
 </body>
 </html>
