--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Bakkerij - Home</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
+    </style>
 </head>
+
 <body>
-    
+    <header>
+        <div class="header-width">
+            <div class="logo">
+                <a href="index.html"><img src="/Logo/logo_large.png" alt="home-logo" class="logo"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="over-ons.html">Over ons</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="hero-container home-image">
+            <h1 aria-hidden="true">Home</h1>
+        </div>
+        <div class="over-ons-info">
+            <div class="over-ons-img"></div>
+            <h2>Over ons</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo
+                sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio
+                tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et
+                malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat
+                facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id
+                malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+        </div>
+        <div class="contact-info">
+            <h2>Contact</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo
+                sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio
+                tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et
+                malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat
+                facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id
+                malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend scelerisque
+                rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in ante.</p>
+            <div class="contact-img"></div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
