--- a/Webblocks/Opdracht 7/index.html
+++ b/Webblocks/Opdracht 7/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Webblocks - Opdracht 7</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
