commit Home pagina

--- a/index.html
+++ b/index.html
@@ -30,33 +30,80 @@
         <div class="hero-container home-image">
             <h1 aria-hidden="true">Home</h1>
         </div>
-        <div class="over-ons-info">
-            <div class="over-ons-img"></div>
-            <h2>Over ons</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo
-                sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio
-                tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et
-                malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat
-                facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id
-                malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque
-                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+        <div class="over-ons-container">
+            <div class="over-ons">
+                <img src="./Foto's website/Image-4.jpg" alt="over-ons-img">
+            </div>
+            <div class="over-ons-info">
+                <h3>Over ons</h3>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare
+                        lobortis commodo
+                        sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper
+                        odio
+                        tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et
+                        netus et
+                        malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in
+                        placerat
+                        facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet,
+                        consectetur adipiscing
+                        elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan
+                        libero, id
+                        malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
+                        Pellentesque
+                        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+                </div>
+            </div>
+
         </div>
-        <div class="contact-info">
-            <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis commodo
-                sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio
-                tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus et
-                malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in placerat
-                facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero, id
-                malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi. Pellentesque
-                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend scelerisque
-                rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in ante.</p>
-            <div class="contact-img"></div>
+        <div class="contact-container">
+            <div class="contact-info">
+                <h3>Contact</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare
+                    lobortis
+                    commodo
+                    sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper
+                    odio
+                    tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et
+                    netus
+                    et
+                    malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in
+                    placerat
+                    facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing
+                    elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan
+                    libero,
+                    id
+                    malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
+                    Pellentesque
+                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend
+                    scelerisque
+                    rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in
+                    ante.
+                </p>
+                <button type="button" class="btn over
+                <div class="contact">
+                    <img src="./Foto's website/Image-2.jpg" alt="contact-img">
+                </div>
+            </div>
+
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-width">
+            <div class="watermark">
+                <p>© 2021 - Bakkerij</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="over-ons.html">Over ons</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 
 </html>
