--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,27 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="over-ons.html">Over ons</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" class="current">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+    <main>
+
+    </main>
+    <footer>
+        <div class="footer-width">
+            <p>© 2021 - Bakkerij</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="over-ons.html">Over ons</a></li>
+                    <li><a href="contact.html" class="current">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
