--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
             </div>
             <div class="over-ons-info">
                 <h3>Over ons</h3>
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare
-                        lobortis commodo
-                        sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper
-                        odio
-                        tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et
-                        netus et
-                        malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in
-                        placerat
-                        facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing
-                        elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan
-                        libero, id
-                        malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
-                        Pellentesque
-                        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
-                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare
+                    lobortis commodo
+                    sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper
+                    odio
+                    tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et
+                    netus et
+                    malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in
+                    placerat
+                    facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing
+                    elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan
+                    libero, id
+                    malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
+                    Pellentesque
+                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                </p>
+                <a href="over-ons.html"><button type="button" class="button">Lees meer</button></a>
             </div>
 
         </div>
@@ -82,19 +82,16 @@
                     rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in
                     ante.
                 </p>
-                <button type="button" class="btn over
-                <div class="contact">
-                    <img src="./Foto's website/Image-2.jpg" alt="contact-img">
-                </div>
+                <a href="contact.html"><button type="button" class="button contact">Lees meer</button></a>
+            </div>    
+            <div class="contact">
+                <img src="./Foto's website/Image-2.jpg" alt="contact-img">
             </div>
-
         </div>
     </main>
     <footer>
         <div class="footer-width">
-            <div class="watermark">
-                <p>© 2021 - Bakkerij</p>
-            </div>
+            <p>© 2021 - Bakkerij</p>
             <nav>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
