--- a/over-ons.html
+++ b/over-ons.html
@@ -17,8 +17,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="current">Home</a></li>
-                    <li><a href="over-ons.html">Over ons</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="over-ons.html" class="current">Over ons</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -28,8 +28,42 @@
         <div class="hero-container over-ons-image">
             <h1 aria-hidden="true">Over ons</h1>
         </div>
-        
+        <div class="info-over-ons">
+            <h2>Over ons</h2>
+            <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+                quis, vehicula rutrum erat. 
+            </p>
+        </div>
+        <div class=""></div>
+        <div>
+            <p>
+                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem
+Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+quis, vehicula rutrum erat.
+Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+            </p>
+        </div>
     </main>
-    
+    <footer>
+        <div class="footer-width">
+            <p>© 2021 - Bakkerij</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="over-ons.html" class="current">Over ons</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
