--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
         </div>
     </header>
     <main>
-
+        <div class="hero-container contact-image">
+            <h1 aria-hidden="true">Contact</h1>
+        </div>
     </main>
     <footer>
         <div class="footer-width">
