Commit over ons pagina

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Bakkerij - Contact</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
     </style>
@@ -31,7 +31,7 @@
     </main>
     <footer>
         <div class="footer-width">
-            <p>© 2021 - Bakkerij</p>
+            <p>&#169; 2021 - Bakkerij</p>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
