--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     libero, id
                     malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
                     Pellentesque
-                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </p>
                 <a href="over-ons.html"><button type="button" class="button">Lees meer</button></a>
             </div>
@@ -59,31 +59,25 @@
         <div class="contact-container">
             <div class="contact-info">
                 <h3>Contact</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare
-                    lobortis
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sapien a arcu ornare lobortis
                     commodo
-                    sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper
-                    odio
-                    tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et
-                    netus
+                    sit amet dui. Sed maximus accumsan libero, id malesuada diam tincidunt sit amet. Nunc semper odio
+                    tristique, mattis purus eget, efficitur mi. Pellentesque habitant morbi tristique senectus et netus
                     et
                     malesuada fames ac turpis egestas. Nunc eleifend scelerisque rhoncus. Quisque ornare erat in
                     placerat
-                    facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet,
-                    consectetur
+                    facilisis. In a lorem eu neque varius consequat at in ante. Lorem ipsum dolor sit amet, consectetur
                     adipiscing
-                    elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan
-                    libero,
+                    elit. Donec vitae sapien a arcu ornare lobortis commodo sit amet dui. Sed maximus accumsan libero,
                     id
                     malesuada diam tincidunt sit amet. Nunc semper odio tristique, mattis purus eget, efficitur mi.
                     Pellentesque
                     habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend
                     scelerisque
-                    rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in
-                    ante.
+                    rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in ante.
                 </p>
                 <a href="contact.html"><button type="button" class="button contact">Lees meer</button></a>
-            </div>    
+            </div>
             <div class="contact">
                 <img src="./Foto's website/Image-2.jpg" alt="contact-img">
             </div>
@@ -91,7 +85,7 @@
     </main>
     <footer>
         <div class="footer-width">
-            <p>© 2021 - Bakkerij</p>
+            <p>&#169; 2021 - Bakkerij</p>
             <nav>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
