--- a/over-ons.html
+++ b/over-ons.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Bakkerij - Over ons</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/2d56d8ddfe.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <div class="header-width">
@@ -30,32 +33,83 @@
         </div>
         <div class="info-over-ons">
             <h2>Over ons</h2>
-            <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
-                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
-                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
-                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
-                quis, vehicula rutrum erat. 
+            <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
+                mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
+                aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
+                efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
+                convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+                quis, vehicula rutrum erat.
             </p>
         </div>
-        <div class=""></div>
-        <div>
+        <div class="example-image">
+            <img src="./Foto's website/Image-5.jpg">
+        </div>
+        <div class="info-over-ons">
             <p>
-                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
-tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
-arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem
-Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
-ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
-sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
-tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
-quis, vehicula rutrum erat.
-Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
-tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
+                sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+                tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
+                odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+                arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare
+                leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem
+                Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
+                mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
+                aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
+                efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
+                convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+                quis, vehicula rutrum erat.<br><br>
+                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
+                sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+                tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
+                odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
             </p>
+        </div>
+        <div class="profile-container">
+            <div class="profile-info">
+                <img src="./Foto's website/Image-1.jpg">
+                <h2>Lorem Ipsum</h2>
+                <h3>Titel</h3>
+                <div class="icons">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Donec fringilla justo nec diam vulputate, at luctus eros
+                    placerat. Duis massa arcu, ultrices mollis enim quis,
+                    tempor rutrum nunc. Pellentesque nisi massa, vehicula
+                    quis viverra eget, sollicitudin vestibulum ex.
+                </p>
+            </div>
+            <div class="profile-info">
+                <img src="./Foto's website/Image-1.jpg">
+                <h2>Lorem Ipsum</h2>
+                <h3>Titel</h3>
+                <div class="icons">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Donec fringilla justo nec diam vulputate, at luctus eros
+                    placerat. Duis massa arcu, ultrices mollis enim quis,
+                    tempor rutrum nunc. Pellentesque nisi massa, vehicula
+                    quis viverra eget, sollicitudin vestibulum ex.
+                </p>
+            </div>
         </div>
     </main>
     <footer>
         <div class="footer-width">
-            <p>© 2021 - Bakkerij</p>
+            <p>&#169; 2021 - Bakkerij</p>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -66,4 +120,5 @@ tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet 
         </div>
     </footer>
 </body>
+
 </html>
