commit contactformulier bakkerij

--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,76 @@
             </nav>
         </div>
     </header>
-    <main>
         <div class="hero-container contact-image">
             <h1 aria-hidden="true">Contact</h1>
+        </div>
+        <div class="contact-info">
+            <div class="info">
+                <h2>Hier kunt u ons vinden!</h2>
+                <div class="adres">
+                    <h3>Adres</h3>
+                    <p>Hollandsch Diep 61c <br> 2904 EP, Capelle aan den IJssel</p>
+                </div>
+                <div class="telefoon">
+                    <h3>Telefoonnummer</h3>
+                    <p>+31 612345678</p>
+                </div>
+                <div class="mail">
+                    <h3>Email</h3>
+                    <p>Info@bakkerij.nl</p>
+                </div>
+                <div class="openingstijden">
+                    <h3>Openingstijden</h3>
+                </div>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td class="day">Maandag</td>
+                            <td class="time">Gesloten</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Dinsdag</td>
+                            <td class="time">8:00 - 17:00</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Woensdag</td>
+                            <td class="time">8:00 - 17:00</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Donderdag</td>
+                            <td class="time">8:00 - 17:00</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Vrijdag</td>
+                            <td class="time">8:00 - 20:00</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Zaterdag</td>
+                            <td class="time">8:00 - 17:00</td>
+                        </tr>
+                        <tr>
+                            <td class="day">Zondag</td>
+                            <td class="time">Gesloten</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="contactformulier">
+                <div class="textboxes">
+                    <label for="name">Naam</label>
+                    <input type="text" class="name">
+                    <label for="email">Email adres</label>
+                    <input type="text" class="email">
+                    <label for="phone">Telefoonnummer</label>
+                    <input type="text" class="phone">
+                    <label for="message">Bericht</label>
+                    <input type="text" class="Bericht">
+                </div>
+                <div class="send-button">
+                    <button type="button" class="validation-button">Verzenden</button>
+                </div>
+            </div>
+            
         </div>
     </main>
     <footer>
