--- a/over-ons.html
+++ b/over-ons.html
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div class="example-image">
-            <img src="./Foto's website/Image-5.jpg">
+            <img src="./Foto's-website/Image-5.jpg" alt="brood maken">
         </div>
         <div class="info-over-ons">
             <p>
@@ -72,14 +72,14 @@
         </div>
         <div class="profile-container">
             <div class="profile-info">
-                <img src="./Foto's website/Image-1.jpg">
+                <img src="./Foto's-website/Image-1.jpg" alt="profiel-foto">
                 <h2>Lorem Ipsum</h2>
                 <h3>Titel</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://twitter.com/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Donec fringilla justo nec diam vulputate, at luctus eros
@@ -89,14 +89,14 @@
                 </p>
             </div>
             <div class="profile-info">
-                <img src="./Foto's website/Image-1.jpg">
+                <img src="./Foto's-website/Image-1.jpg" alt="profiel-foto">
                 <h2>Lorem Ipsum</h2>
                 <h3>Titel</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://twitter.com/"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Donec fringilla justo nec diam vulputate, at luctus eros
