--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="over-ons-container">
             <div class="over-ons">
-                <img src="./Foto's website/Image-4.jpg" alt="over-ons-img">
+                <img src="./Foto's-website/Image-4.jpg" alt="over-ons-img">
             </div>
             <div class="over-ons-info">
                 <h3>Over ons</h3>
@@ -52,7 +52,7 @@
                     Pellentesque
                     habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </p>
-                <a href="over-ons.html"><button type="button" class="button">Lees meer</button></a>
+                <a href="./over-ons.html" class="button">Lees meer</a>
             </div>
 
         </div>
@@ -76,10 +76,10 @@
                     scelerisque
                     rhoncus. Quisque ornare erat in placerat facilisis. In a lorem eu neque varius consequat at in ante.
                 </p>
-                <a href="contact.html"><button type="button" class="button contact">Lees meer</button></a>
+                <a href="./contact.html" class="button">Lees meer</a>
             </div>
             <div class="contact">
-                <img src="./Foto's website/Image-2.jpg" alt="contact-img">
+                <img src="./Foto's-website/Image-2.jpg" alt="contact-img">
             </div>
         </div>
     </main>
