--- a/over-ons.html
+++ b/over-ons.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Bakkerij - Over ons</title>
+    <script src="https://kit.fontawesome.com/2d56d8ddfe.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
     </style>
-    <script src="https://kit.fontawesome.com/2d56d8ddfe.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="header-width">
+            
             <div class="logo">
                 <a href="index.html"><img src="/Logo/logo_large.png" alt="home-logo" class="logo"></a>
             </div>
@@ -31,44 +32,46 @@
         <div class="hero-container over-ons-image">
             <h1 aria-hidden="true">Over ons</h1>
         </div>
-        <div class="info-over-ons">
-            <h2>Over ons</h2>
-            <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
-                mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
-                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
-                aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
-                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
-                efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
-                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
-                convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
-                quis, vehicula rutrum erat.
-            </p>
-        </div>
-        <div class="example-image">
-            <img src="./Foto's-website/Image-5.jpg" alt="brood maken">
-        </div>
-        <div class="info-over-ons">
-            <p>
-                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
-                sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
-                tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
-                odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
-                arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare
-                leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem
-                Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
-                mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
-                ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
-                aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
-                sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
-                efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
-                tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
-                convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
-                quis, vehicula rutrum erat.<br><br>
-                Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
-                sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
-                tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
-                odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
-            </p>
+        <div class="over_ons-information">
+            <div class="info-over-ons">
+                <h2>Over ons</h2>
+                <p>Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
+                    mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+                    ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
+                    aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+                    sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
+                    efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+                    tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
+                    convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+                    quis, vehicula rutrum erat.
+                </p>
+            </div>
+            <div class="example-image">
+                <img src="./Foto's-website/Image-5.jpg" alt="brood maken">
+            </div>
+            <div class="info-over-ons">
+                <p>
+                    Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
+                    sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+                    tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
+                    odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+                    arcu molestie rutrum sit amet sodales lectus. Quisque dictum lorem vitae risus consectetur, eget ornare
+                    leo pellentesque. Sed felis ex, ultricies nec feugiat vitae, rutrum in sem
+                    Curabitur felis dolor, gravida et dui eu, mattis mollis nulla. Quisque in pretium turpis, sed interdum
+                    mauris. Vivamus imperdiet, nisl eu accumsan finibus, risus leo commodo
+                    ante, a vulputate tellus nulla eu tellus. Etiam vitae nisi neque. Donec aliquet arcu nec sem pretium
+                    aliquam. Phasellus quis euismod metus. Nulla facilisi. Donec vestibulum, leo
+                    sed auctor sollicitudin, magna nunc egestas odio, et porttitor libero enim vitae tellus. Vestibulum
+                    efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
+                    tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
+                    convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
+                    quis, vehicula rutrum erat.<br><br>
+                    Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
+                    sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
+                    tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
+                    odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+                </p>
+            </div>
         </div>
         <div class="profile-container">
             <div class="profile-info">
