recommit bakkerij tot aan de submit button

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <div class="hero-container contact-image">
             <h1 aria-hidden="true">Contact</h1>
         </div>
-        <div class="contact-information">
+        <label class="contact-information">
             <div class="info">
                 <h2>Hier kunt u ons vinden!</h2>
                 <div class="adres">
@@ -91,8 +91,8 @@
                     <input type="text" id="phone">
                     <label for="message">Bericht</label>
                     <textarea id="message" name="Bericht" rows="8" cols="75"></textarea>
-                    <div class="send-button">
-                        <button type="button" class="validation-button">Verzenden</button>
+                    <div class="submit-button">
+                        <input type="submit" value="Verzenden" class="validation-button">
                     </div>
                 </form>
             </div>
