--- a/over-ons.html
+++ b/over-ons.html
@@ -65,11 +65,10 @@
                     efficitur dui quam, nec faucibus elit egestas sit amet. Proin quis iaculis purus,
                     tristique blandit magna. Nulla nec sollicitudin velit. Mauris lorem est, lobortis id diam at, lobortis
                     convallis erat. Maecenas nec varius erat. Donec tortor velit, fringilla eleifend est
-                    quis, vehicula rutrum erat.<br><br>
-                    Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
+                    quis, vehicula rutrum erat. <br><br> Vivamus ut mattis nunc. Fusce convallis turpis ac urna dapibus ultrices. Nam lobortis diam nec tellus
                     sollicitudin pretium sit amet at erat. Nulla interdum commodo neque, id
                     tempor est viverra in. Phasellus id tellus odio. Ut sollicitudin, nunc sit amet placerat aliquet, nisl
-                    odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel
+                    odio varius sapien, vel faucibus ligula lacus id nibh. Pellentesque id lorem vel</p>
                 </p>
             </div>
         </div>
