--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Fietsenmaker - Home</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/da854b2a40.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,18 +22,53 @@
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
-            <div>
-                <button>
-                    <link href="reparatie.html">Maak een afspraak
-                </button>
+            <div class="link-rep-pagina">
+                <button href="reparatie.html">Maak een afspraak</button>
             </div>
+        </div>
+        <div class="hero-container home-image">
+            <h3 aria-hidden="true">DE BESTE FIETSENMAKER IN NEDERLAND!</h2>
         </div>
     </header>
     <main>
-
+        <div class="info-container">
+            <div class="klant">
+                <i class="fa-solid fa-users"></i>
+                <h5>KLANTGERICHT</h5>
+                <p>Klanten staan bij ons op #1!</p>
+            </div>
+            <div class="bezorging">
+                <i class="fa-solid fa-truck"></i>
+                <h5>HAAL EN BRENGSERVICE</h5>
+                <p>Geen zin om naar ons toe <br>te komen? Maakt niet uit!</p>
+            </div>
+            <div class="prijs">
+                <i class="fa-solid fa-money-bill-wave"></i>
+                <h5>BETAALBAAR</h5>
+                <p>Onze fietsen zijn <br>betaalbaar, en van kwaliteit!</p>
+            </div>
+            <div class="tijdsopgaven">
+                <i class="fa-solid fa-person-biking"></i>
+                <h5>SNEL WEER OP WEG</h5>
+                <p>Binnen no time kan jij weer <br>op weg!</p>
+            </div>
+        </div>
     </main>
     <footer>
-
+        <div class="footer-width">
+            <div class="copyright">
+                <p>Copyright - Fietsenmaker</p>
+            </div>
+            <div class="nav-footer">
+                <nav>
+                    <ul>
+                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="winkel.html">Winkel</a></li>
+                        <li><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </footer>
 </body>
 
