--- a/reparatie.html
+++ b/reparatie.html
@@ -4,14 +4,15 @@
         <title>Fietsenmaker - Reparatie</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
             <div class="openingstijden">
-                <h3>Elke werkdag open van 08:00 tot 18:00</h3>
+                <p>Elke werkdag open van 08:00 tot 18:00</p>
             </div>
             <div class="header-width">
-                <h2 href="index.html">FIETSEN<span>MAKER</span></h2>
+                <h3 href="index.html">FIETSEN<span>MAKER</span></h3>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -19,18 +20,32 @@
                         <li class="current"><a href="reparatie.html">Reparatie</a></li>
                     </ul>
                 </nav>
-                <div>
-                    <button>
-                        <link href="reparatie.html">Maak een afspraak
-                    </button>
+                <div class="link-rep-pagina">
+                    <button href="reparatie.html">Maak een afspraak</button>
                 </div>
+            </div>
+            <div class="hero-container home-image">
+                <h3 aria-hidden="true">PLAN UW REPARATIE</h3>
             </div>
         </header>
         <main>
 
         </main>
         <footer>
-            
+            <div class="footer-width">
+                <div class="copyright">
+                    <p>Copyright - Fietsenmaker</p>
+                </div>
+                <div class="nav-footer">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="winkel.html">Winkel</a></li>
+                            <li class="current"><a href="reparatie.html">Reparatie</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
