3rd commit fietsenmaker

--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
                 <p>Binnen no time kan jij weer <br>op weg!</p>
             </div>
         </div>
+        <div class="uitleg">
+            <div class="tekst">
+                <h5>Een fiets voor iedereen!</h5>
+                <p>Aenean laoreet felis ac enim malesuada feugiat. Nam est augue,
+                    condimentum eu vestibulum id, volutpat nec ante. Nam ultricies diam
+                    ipsum, a dictum turpis facilisis in. Nam ultrices et massa et bibendum. Nulla
+                    facilisi. In interdum sem id arcu maximus hendrerit. Integer nec lorem
+                    mollis, efficitur lorem et, eleifend quam. Pellentesque scelerisque erat
+                    lectus, vitae commodo risus iaculis varius. Vivamus dui tortor, egestas non
+                    odio eget, pretium mattis odio. <br><br>Aenean a dolor risus. Nunc id condimentum sem, quis malesuada nisl.
+                    Etiam vestibulum neque ac orci egestas semper et vitae diam. Maecenas
+                    lobortis sed tellus ac pellentesque. Maecenas scelerisque ex erat, ac
+                    lobortis nunc maximus in. Praesent auctor felis semper elit imperdiet
+                    vestibulum. Proin volutpat ante a nisi imperdiet ullamcorper. Sed quis
+                    porttitor justo. Ut aliquet eros ac suscipit malesuada.</p>
+            </div>
+            <div class="image">
+                <img src="./Fietsenmaker/Images/home-afbeelding.jpg">
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-width">
