--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </ul>
             </nav>
             <div class="link-rep-pagina">
-                <button href="reparatie.html">Maak een afspraak</button>
+                <a href="reparatie.html"><button>Maak een afspraak</button></a>
             </div>
         </div>
         <div class="hero-container home-image">
-            <h3 aria-hidden="true">DE BESTE FIETSENMAKER IN NEDERLAND!</h2>
+            <h3>DE BESTE FIETSENMAKER IN NEDERLAND!</h3>
         </div>
     </header>
     <main>
@@ -55,7 +55,7 @@
         </div>
         <div class="uitleg">
             <div class="tekst">
-                <h5>Een fiets voor iedereen!</h5>
+                <h5>EEN FIETS VOOR IEDEREEN!</h5>
                 <p>Aenean laoreet felis ac enim malesuada feugiat. Nam est augue,
                     condimentum eu vestibulum id, volutpat nec ante. Nam ultricies diam
                     ipsum, a dictum turpis facilisis in. Nam ultrices et massa et bibendum. Nulla
