--- a/reparatie.html
+++ b/reparatie.html
@@ -4,7 +4,7 @@
         <title>Fietsenmaker - Reparatie</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/da854b2a40.js" crossorigin="anonymous"></script>    
     </head>
     <body>
         <header>
@@ -29,7 +29,83 @@
             </div>
         </header>
         <main>
+            <div class="contact-info">
+                <div class="contactformulier">
+                    <form method="post">
+                        <label for="fname"></label>
+                        <input id="fname" name="first-name" type="text" required>
 
+                        <label for="lname"></label>
+                        <input id="lname" name="last-name" type="text" required>
+
+                        <label for="email"></label>
+                        <input id="email" name="Email" type="email" required>
+
+                        <label for="company"></label>
+                        <input id="company" name="Company-name" type="text">
+
+                        <label for="checkbox">Heeft u de fiets bij ons gekocht?</label>
+                        <input id="checkbox" name="button" type="radio" value="Ja" required>
+                        <label for="checkbox">Ja</label>
+
+                        <input id="checkbox" name="button" type="radio" value="Nee" required>
+                        <label for="checkbox">Nee</label>
+
+                        <label for="date">Selecteer een datum voor reparatie</label>
+                        <label for="date"></label>
+                        <input id="date" name="Date/Time" type="date" required>
+
+                        <label for="comment"></label>
+                        <textarea id="comment" name="" rows="5" cols="30"></textarea>
+                        <input id="submit" name="submit-button" type="submit">
+                    </form>
+                </div>
+                <div class="algemene-info">
+                    <h5>CONTACTGEGEVENS</h5>
+                    <p>
+                        Teststraat 45<br>
+                        1234 AB, testplaats<br><br>
+
+                        T: 010 - 123 456 78<br>
+                        E: info@fietsenmaker.nl
+                    </p>
+                    <h5>OPENINGSTIJDEN</h5>
+                    <div class="openingstijden">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td class="dag">Maandag</td>
+                                    <td class="tijd">8:00 - 17:00</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Dinsdag</td>
+                                    <td class="tijd">8:00 - 17:00</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Woensdag</td>
+                                    <td class="tijd">8:00 - 17:00</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Donderdag</td>
+                                    <td class="tijd">8:00 - 17:00</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Vrijdag</td>
+                                    <td class="tijd">8:00 - 17:00</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Zaterdag</td>
+                                    <td class="tijd">Gesloten</td>
+                                </tr>
+                                <tr>
+                                    <td class="dag">Zondag</td>
+                                    <td class="tijd">gesloten</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="footer-width">
